add simulation files

--- a/Laboratorio_3/Problema_1/alu/db/ALU.lpc.html
+++ b/Laboratorio_3/Problema_1/alu/db/ALU.lpc.html
@@ -16,7 +16,23 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
-<TD >dut_mux16</TD>
+<TD >display</TD>
+<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >7</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >alu|dut_mux16</TD>
 <TD >44</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -32,7 +48,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >rshift</TD>
+<TD >alu|rshift</TD>
 <TD >4</TD>
 <TD >1</TD>
 <TD >1</TD>
@@ -48,7 +64,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >rshift_a</TD>
+<TD >alu|rshift_a</TD>
 <TD >4</TD>
 <TD >0</TD>
 <TD >1</TD>
@@ -64,7 +80,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >lshift</TD>
+<TD >alu|lshift</TD>
 <TD >4</TD>
 <TD >1</TD>
 <TD >1</TD>
@@ -80,7 +96,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >lshift_a</TD>
+<TD >alu|lshift_a</TD>
 <TD >4</TD>
 <TD >1</TD>
 <TD >1</TD>
@@ -96,7 +112,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >dut_xor</TD>
+<TD >alu|dut_xor</TD>
 <TD >8</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -112,7 +128,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >dut_or</TD>
+<TD >alu|dut_or</TD>
 <TD >8</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -128,7 +144,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >dut_and</TD>
+<TD >alu|dut_and</TD>
 <TD >8</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -144,7 +160,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >dut_not_a</TD>
+<TD >alu|dut_not_a</TD>
 <TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -160,7 +176,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >dut_mux2_sub</TD>
+<TD >alu|dut_mux2_sub</TD>
 <TD >9</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -176,7 +192,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >dut_complement|dut_sum_complement|forloop[3].result</TD>
+<TD >alu|dut_complement|dut_sum_complement|forloop[3].result</TD>
 <TD >3</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -192,7 +208,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >dut_complement|dut_sum_complement|forloop[2].result</TD>
+<TD >alu|dut_complement|dut_sum_complement|forloop[2].result</TD>
 <TD >3</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -208,7 +224,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >dut_complement|dut_sum_complement|forloop[1].result</TD>
+<TD >alu|dut_complement|dut_sum_complement|forloop[1].result</TD>
 <TD >3</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -224,7 +240,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >dut_complement|dut_sum_complement|first</TD>
+<TD >alu|dut_complement|dut_sum_complement|first</TD>
 <TD >3</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -240,7 +256,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >dut_complement|dut_sum_complement</TD>
+<TD >alu|dut_complement|dut_sum_complement</TD>
 <TD >9</TD>
 <TD >5</TD>
 <TD >0</TD>
@@ -256,7 +272,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >dut_complement|not_b_mod</TD>
+<TD >alu|dut_complement|not_b_mod</TD>
 <TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -272,7 +288,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >dut_complement</TD>
+<TD >alu|dut_complement</TD>
 <TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -288,7 +304,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >dut_compare</TD>
+<TD >alu|dut_compare</TD>
 <TD >9</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -304,7 +320,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >dut_sum|forloop[3].result</TD>
+<TD >alu|dut_sum|forloop[3].result</TD>
 <TD >3</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -320,7 +336,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >dut_sum|forloop[2].result</TD>
+<TD >alu|dut_sum|forloop[2].result</TD>
 <TD >3</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -336,7 +352,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >dut_sum|forloop[1].result</TD>
+<TD >alu|dut_sum|forloop[1].result</TD>
 <TD >3</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -352,7 +368,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >dut_sum|first</TD>
+<TD >alu|dut_sum|first</TD>
 <TD >3</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -368,7 +384,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >dut_sum</TD>
+<TD >alu|dut_sum</TD>
 <TD >9</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -384,7 +400,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >dut_mux2</TD>
+<TD >alu|dut_mux2</TD>
 <TD >9</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -400,12 +416,28 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >dut_not_b</TD>
+<TD >alu|dut_not_b</TD>
 <TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >alu</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >7</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
