Control Movimiento Funcionando

--- a/Laboratorio_4/movimientos/db/movimiento_matriz.lpc.html
+++ b/Laboratorio_4/movimientos/db/movimiento_matriz.lpc.html
@@ -15,4 +15,84 @@
 <TH>Input only Bidir</TH>
 <TH>Output only Bidir</TH>
 </TR>
+<TR >
+<TD >mux4_1_inst</TD>
+<TD >2563</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >512</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >mov_abajo_inst</TD>
+<TD >512</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >512</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >mov_arriba_inst</TD>
+<TD >512</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >512</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >mov_derecha_inst</TD>
+<TD >512</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >512</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >mov_izquierda_inst</TD>
+<TD >512</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >512</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
 </TABLE>
