--- a/Laboratorio_4/movimientos/db/movimiento_matriz.lpc.html
+++ b/Laboratorio_4/movimientos/db/movimiento_matriz.lpc.html
@@ -16,15 +16,95 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
-<TD >encontrar_ceros_inst</TD>
-<TD >512</TD>
-<TD >16</TD>
+<TD >verificar_matriz_inst</TD>
+<TD >675</TD>
 <TD >0</TD>
-<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >mux4_1_inst</TD>
+<TD >2563</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >512</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >mov_abajo_inst</TD>
+<TD >512</TD>
+<TD >31</TD>
+<TD >0</TD>
+<TD >31</TD>
 <TD >544</TD>
-<TD >16</TD>
-<TD >16</TD>
-<TD >16</TD>
+<TD >31</TD>
+<TD >31</TD>
+<TD >31</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >mov_arriba_inst</TD>
+<TD >512</TD>
+<TD >31</TD>
+<TD >0</TD>
+<TD >31</TD>
+<TD >544</TD>
+<TD >31</TD>
+<TD >31</TD>
+<TD >31</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >mov_derecha_inst</TD>
+<TD >512</TD>
+<TD >31</TD>
+<TD >0</TD>
+<TD >31</TD>
+<TD >544</TD>
+<TD >31</TD>
+<TD >31</TD>
+<TD >31</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >mov_izquierda_inst</TD>
+<TD >512</TD>
+<TD >31</TD>
+<TD >0</TD>
+<TD >31</TD>
+<TD >544</TD>
+<TD >31</TD>
+<TD >31</TD>
+<TD >31</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
