--- a/Laboratorio_4/db/vga_decoding.lpc.html
+++ b/Laboratorio_4/db/vga_decoding.lpc.html
@@ -48,31 +48,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >t1|FontRom</TD>
-<TD >33</TD>
-<TD >0</TD>
-<TD >21</TD>
-<TD >0</TD>
-<TD >8</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >t1</TD>
-<TD >129</TD>
-<TD >108</TD>
-<TD >0</TD>
-<TD >108</TD>
+<TD >chargenromb</TD>
+<TD >14</TD>
 <TD >1</TD>
-<TD >108</TD>
-<TD >108</TD>
-<TD >108</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
